syntax = "proto3";

package prototype;

option go_package = "github.com/coschain/contentos-go/prototype";
option java_package = "io.contentos.android.sdk.prototype";

import "prototype/type.proto";
import "prototype/operation.proto";

message operation{
    oneof op{
        account_create_operation op1 = 1;
        transfer_operation op2 = 2;
        bp_register_operation op3 = 3;
        bp_enable_operation op4 = 4;
        bp_vote_operation op5 = 5;
        post_operation op6 = 6;
        reply_operation op7 = 7;
        follow_operation op8 = 8;
        vote_operation op9 = 9;
        transfer_to_vest_operation op10 = 10;
        //claim_operation op11 = 11;
        //claim_all_operation op12 = 12;
        contract_deploy_operation op13 = 13;
        contract_apply_operation op14 = 14;
        //report_operation op15 = 15;
        convert_vest_operation op16 = 16;
        stake_operation op17 = 17;
        un_stake_operation op18 = 18;
        bp_update_operation op19 = 19;
        account_update_operation op20 = 20;
        acquire_ticket_operation op21 = 21;
        vote_by_ticket_operation op22 = 22;
        delegate_vest_operation op23 = 23;
        un_delegate_vest_operation op24 = 24;
    }
}

// transaction
message transaction{
    uint32 ref_block_num = 1;
    uint32 ref_block_prefix = 2;
    time_point_sec expiration = 3;
    repeated operation operations = 4;
}

message signed_transaction{
    transaction trx = 1;
    signature_type signature = 2;
}

message operation_receipt_with_info {
    uint32 status = 1;
    uint64 gas_usage = 2;
    string vm_console = 3;
}

message transaction_receipt_with_info {
    uint32 status = 1;
    uint64 net_usage = 2;
    uint64 cpu_usage = 3;
    string error_info = 4;
    repeated operation_receipt_with_info op_results = 5;
}

message transaction_wrapper_with_info {
    signed_transaction sig_trx = 1;
    transaction_receipt_with_info receipt = 2;
}

message transaction_receipt {
    uint32 status = 1;
    uint64 net_usage = 2;
    uint64 cpu_usage = 3;
}

message transaction_wrapper {
    signed_transaction sig_trx = 1;
    transaction_receipt receipt = 2;
}

// block
message block_header{
    sha256 previous = 1;
    time_point_sec timestamp = 2;
    account_name block_producer = 3;
    sha256 transaction_merkle_root = 4;
    uint64 prev_apply_hash = 5;
}

message signed_block_header{
    block_header header = 1;
    signature_type block_producer_signature = 2;
}

message signed_block{
    signed_block_header signed_header = 1;
    repeated transaction_wrapper transactions = 2;
}

message empty_signed_block{
    signed_block_header signed_header = 1;
    uint32 trx_count = 2;
}
